added in notify method and interface for all contestants to notify them they have lost, and added notify winner method; added in method to transfer a contestant to a winner class; added winner class to notify them that they won

--- a/Sweepstakes.csproj
+++ b/Sweepstakes.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contestant.cs" />
+    <Compile Include="IContestants.cs" />
     <Compile Include="ManagerFactory.cs" />
     <Compile Include="ISweepstakesManager.cs" />
     <Compile Include="MarketingFirm.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Sweepstakes.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
+    <Compile Include="Winner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
